--- a/lib/views/index.erb
+++ b/lib/views/index.erb
@@ -4,12 +4,12 @@
   </head>
   <body>
     <h1>Mon super site de gossip, depuis le dossier views !</h1>
-		<% gossips.each do |gossip| %>
+		<% gossips.each_with_index do |gossip, index| %>
         <p>
-          <%= gossip.gossip_author %><br/>
-          <%= gossip.gossip_content %>
+          <%= gossip.gossip_author %> 
+					<a href="/gossips/<%=index %>">  <%= gossip.gossip_content%> </a>
         </p>
       <% end %>
-		<a href="/gossips/new/">le texte du lien</a>
+		<a href="/gossips/new/">Poste un nouveau potin</a>
   </body>
 </html>
